--- a/notebooks/Cleaning/Importer_PBC_normal.ipynb
+++ b/notebooks/Cleaning/Importer_PBC_normal.ipynb
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5c8c3941-046e-4b6f-9e6d-4e775ecd30ff",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[#                                       ] | 2% Completed | 11.6s"
+      "[########################################] | 100% Completed | 27.7s\n"
      ]
     }
    ],
@@ -597,10 +597,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "magnetic-quest",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>img_paths</th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "      <th>cell_type</th>\n",
+       "      <th>height</th>\n",
+       "      <th>width</th>\n",
+       "      <th>mean_brightness</th>\n",
+       "      <th>mean_luminance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/monocyte/MO_...</td>\n",
+       "      <td>225079</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>monocyte</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>196.225564</td>\n",
+       "      <td>0.756902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/monocyte/MO_...</td>\n",
+       "      <td>582430</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>monocyte</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>196.672727</td>\n",
+       "      <td>0.757366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/monocyte/MO_...</td>\n",
+       "      <td>436409</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>monocyte</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>204.348235</td>\n",
+       "      <td>0.797640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/monocyte/MO_...</td>\n",
+       "      <td>648815</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>monocyte</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>199.038259</td>\n",
+       "      <td>0.770929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/monocyte/MO_...</td>\n",
+       "      <td>668574</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>monocyte</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>191.020018</td>\n",
+       "      <td>0.734784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17087</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/ig/PMY_73148...</td>\n",
+       "      <td>73148</td>\n",
+       "      <td>IG</td>\n",
+       "      <td>ig</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>190.868100</td>\n",
+       "      <td>0.729896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17088</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/ig/MY_364905...</td>\n",
+       "      <td>364905</td>\n",
+       "      <td>IG</td>\n",
+       "      <td>ig</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>198.083540</td>\n",
+       "      <td>0.769725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17089</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/ig/MY_22578.jpg</td>\n",
+       "      <td>22578</td>\n",
+       "      <td>IG</td>\n",
+       "      <td>ig</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>202.367218</td>\n",
+       "      <td>0.791640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17090</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/ig/PMY_75125...</td>\n",
+       "      <td>751256</td>\n",
+       "      <td>IG</td>\n",
+       "      <td>ig</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>190.455229</td>\n",
+       "      <td>0.731147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17091</th>\n",
+       "      <td>../../data/PBC_dataset_normal_DIB/ig/MMY_24409...</td>\n",
+       "      <td>244097</td>\n",
+       "      <td>IG</td>\n",
+       "      <td>ig</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>202.872582</td>\n",
+       "      <td>0.790463</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17092 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               img_paths      id label  \\\n",
+       "0      ../../data/PBC_dataset_normal_DIB/monocyte/MO_...  225079    MO   \n",
+       "1      ../../data/PBC_dataset_normal_DIB/monocyte/MO_...  582430    MO   \n",
+       "2      ../../data/PBC_dataset_normal_DIB/monocyte/MO_...  436409    MO   \n",
+       "3      ../../data/PBC_dataset_normal_DIB/monocyte/MO_...  648815    MO   \n",
+       "4      ../../data/PBC_dataset_normal_DIB/monocyte/MO_...  668574    MO   \n",
+       "...                                                  ...     ...   ...   \n",
+       "17087  ../../data/PBC_dataset_normal_DIB/ig/PMY_73148...   73148    IG   \n",
+       "17088  ../../data/PBC_dataset_normal_DIB/ig/MY_364905...  364905    IG   \n",
+       "17089  ../../data/PBC_dataset_normal_DIB/ig/MY_22578.jpg   22578    IG   \n",
+       "17090  ../../data/PBC_dataset_normal_DIB/ig/PMY_75125...  751256    IG   \n",
+       "17091  ../../data/PBC_dataset_normal_DIB/ig/MMY_24409...  244097    IG   \n",
+       "\n",
+       "      cell_type  height  width  mean_brightness  mean_luminance  \n",
+       "0      monocyte     363    360       196.225564        0.756902  \n",
+       "1      monocyte     363    360       196.672727        0.757366  \n",
+       "2      monocyte     363    360       204.348235        0.797640  \n",
+       "3      monocyte     363    360       199.038259        0.770929  \n",
+       "4      monocyte     363    360       191.020018        0.734784  \n",
+       "...         ...     ...    ...              ...             ...  \n",
+       "17087        ig     363    360       190.868100        0.729896  \n",
+       "17088        ig     363    360       198.083540        0.769725  \n",
+       "17089        ig     363    360       202.367218        0.791640  \n",
+       "17090        ig     363    360       190.455229        0.731147  \n",
+       "17091        ig     363    360       202.872582        0.790463  \n",
+       "\n",
+       "[17092 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res_df = pd.concat(res).reset_index(drop=True)\n",
     "df_temp = df.join(res_df)\n",
@@ -609,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "elect-receipt",
    "metadata": {},
    "outputs": [],
@@ -619,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "id": "392a03d7-59c2-4169-ba22-a08b4a6a4e49",
    "metadata": {},
    "outputs": [
@@ -651,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "dff59edf-f0b7-4603-9be8-97ff60c222c6",
    "metadata": {},
    "outputs": [],
