--- a/notebooks/EDA/EDA_mean_color.ipynb
+++ b/notebooks/EDA/EDA_mean_color.ipynb
@@ -714,8 +714,8 @@
    "source": [
     "# Plot, classe par classe, de l'image moyenne (canaux, rvb, gray) de la cellule\n",
     "\n",
-    "#classes = df['label'].unique().tolist()\n",
-    "classes = [\"MO\"]\n",
+    "classes = df['label'].unique().tolist()\n",
+    "#classes = [\"MO\"]\n",
     "\n",
     "df_mean2 = pd.DataFrame(columns = [\"r\",\"g\",\"b\",\"grey\",\"std_r\",\"std_g\",\"std_b\",\"std_grey\",\"std_rgb\"])\n",
     "\n",
