--- a/notebooks/EDA/EDA_mean_gray.ipynb
+++ b/notebooks/EDA/EDA_mean_gray.ipynb
@@ -1507,9 +1507,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DStest",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dstest"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1521,7 +1521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
