--- a/notebooks/cleaning/Importer_PBC_normal.ipynb
+++ b/notebooks/cleaning/Importer_PBC_normal.ipynb
@@ -863,9 +863,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DStest",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dstest"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -877,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
