--- a/notebooks/cleaning/Importer_PBC_AML_APL.ipynb
+++ b/notebooks/cleaning/Importer_PBC_AML_APL.ipynb
@@ -1534,16 +1534,8 @@
     "tags": []
    },
    "source": [
-    "# TO DO clean up cell"
+    "<div class=\"alert alert-block alert-danger\"><b>CONCLUSION:</b> Reject dataset.</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c092e025-7021-4404-a9eb-7d39dd8c1e97",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
