--- a/notebooks/cleaning/generate_dataframes.ipynb
+++ b/notebooks/cleaning/generate_dataframes.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "id": "fbbc456d-a9c3-4d8c-bc16-ca1d4004a20f",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>img_paths</th>\n",
+       "      <th>img_path</th>\n",
        "      <th>cell_type</th>\n",
        "      <th>label</th>\n",
        "      <th>label_2</th>\n",
@@ -298,7 +298,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               img_paths     cell_type label  \\\n",
+       "                                                img_path     cell_type label  \\\n",
        "0      ../../data/main_dataset/training_set/PLATELET_...  training_set   PLT   \n",
        "1      ../../data/main_dataset/training_set/ERB_65190...  training_set   ERB   \n",
        "2      ../../data/main_dataset/training_set/BA_944690...  training_set    BA   \n",
@@ -327,14 +327,22 @@
        "[12768 rows x 5 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "generate_images_df('../../data/main_dataset/training_set/')"
+    "leuko.generate_images_df('../../data/main_dataset/training_set/')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc5434db-e025-405f-9b17-3a6d8235db03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
